Seal internal hierarchies, more cleanup